# libenxtxt

./: CMakeLists.txt  LICENSE.txt  README.md
include/enx/txt/: convert.h  format.h  fstr.h  tokenizer.h
lib/: CMakeLists.txt
lib/include/enx/txt/: format.h  fstr.h
lib/source/: convert.c  format.c  format_sprintf.c  fstr.c  tokenizer.c
source/: convert.c  format.c  fstr.c  tokenizer.c
src/: convert.c  tokenizer.c
tests/: CMakeLists.txt  test_convert.c  test_format.c  test_fstr.c
tests/source/: test_convert.c  test_format.c  test_format_flt.c  test_fstr.c  test_tokenizer.c
